
== `0.x` changes

=== `0.2.2` (in progress)

- [FIX] Convert key names of entries added to OpenTelemetry attributes to snake_case.
This applies to resources, spans and metrics.
- [FIX] Do not transform key names of entries added to OpenTelemetry context or baggage.
- [ADD] Function `set-attribute-name-fn!` to override setting of OpenTelemetry attribute key names.

=== `0.2.1` (2023-05-08)

- [FIX] Use `.` instead of `/` in namespace qualified attribute names
- [MAINT] Removed deprecated build dep `build-clj`
- Bump deps:
* [MAINT] OpenTelemetry `1.26.0`
* [MAINT] gRPC `1.54.1`
* [MAINT] Various build deps

=== `0.2.0` (2023-04-10)

- [ADD] Support for Metrics API
- [ADD] Implementations of the following https://opentelemetry.io/docs/reference/specification/metrics/semantic_conventions/http-metrics/[HTTP server metrics] for use by applications not run with the OpenTelemetry instrumentation agent:
* `http.server.active_requests`
* `http.server.duration`
* `http.server.request.size`
- [BREAK] The parameters for function `add-route-data!` have changed, there is a new parameter to specify the HTTP request method.
- [BREAK] The pattern for using `clj-otel` middleware and interceptors in applications has been revised.
The revised pattern adds new middleware `wrap-route`, `wrap-active-requests` and
`wrap-metrics-by-route` and interceptors `route-interceptor`, `active-requests-interceptor` and `metrics-by-route-interceptors` to capture matched routes in HTTP server spans and HTTP server metrics.
The pattern also ensures all requests are recorded, including those which do not match any route.
- [ADD] Module `clj-otel-instrumentation-runtime-metrics` to provide access to JVM runtime metrics instrumentation for applications not using the OpenTelemetry instrumentation agent.
- [ADD] Aliases in examples
** `:metrics-*` to control export of metrics
** `:logging-*` to control application logging
- Bump deps:
* [MAINT] OpenTelemetry `1.25.0`