@@ -66,12 +66,11 @@ Find more in-depth information on `clj-otel` in the xref:_documentation[document
 
 * To export telemetry data (from both manual and automatic instrumentation) from an application at runtime
 ** Download the latest OpenTelemetry instrumentation JAR `opentelemetry-javaagent.jar` from the https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases[OpenTelemetry instrumentation agent releases page].
-** Add the following JVM options to your application, assuming export of traces telemetry only to https://www.jaegertracing.io/[Jaeger]
+** Add the following JVM options to your application, assuming export of traces telemetry only to an OTLP compliant backend such as https://www.jaegertracing.io/[Jaeger]
 +
 ----
 "-javaagent:opentelemetry-javaagent.jar"
 "-Dotel.resource.attributes=service.name=NAME-OF-YOUR-SERVICE"
-"-Dotel.traces.exporter=jaeger"
 "-Dotel.metrics.exporter=none"
 ----
 
@@ -80,7 +79,11 @@ Find more in-depth information on `clj-otel` in the xref:_documentation[document
 +
 [source,bash]
 ----
-docker run --rm -p 16686:16686 -p 14250:14250 jaegertracing/all-in-one
+docker run --rm                     \
+           -p 16686:16686           \
+           -p 4317:4317             \
+           jaegertracing/all-in-one \
+           --collector.otlp.enabled=true
 ----
 
 * To explore application behaviour described by the received telemetry data
