@@ -30,6 +30,9 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 This applies to resources, spans and metrics.
 - [FIX] Do not transform key names of entries added to OpenTelemetry context or baggage.
 - [ADD] Function `set-attribute-name-fn!` to override setting of OpenTelemetry attribute key names.
+- [MAINT] Remove Jaeger exporters from examples, since they will be deprecated soon.
+The Jaeger Collector now accepts OTLP directly.
+See the https://www.jaegertracing.io/docs/1.45/client-libraries/#deprecating-jaeger-clients[Jaeger clients deprecation notice].
 
 === `0.2.1` (2023-05-08)
 
